examples/Errors/101.zph
a # PT:abc;

a ? pushh:;